2005-02-08  Roger While <simrw@sim-basis.de>

	* parser.y, codegen.c, tree.h, tree.c
	  Implement EXTERNAL AS Literal

2005-02-08  Roger While <simrw@sim-basis.de>

	* codegen.c : Rearrange generated code slightly
	  Do not gen stack values we do not need
	  Generate static function prototype so that we
	  can gen code in order : main (if appropiate),
	  entry points, static function

2005-02-07  Roger While <simrw@sim-basis.de>

	* cobc.c : Slight change for Cygwin
	* codegen.c : Adjust handling for EXTERNAL items

2005-02-04  Roger While <simrw@sim-basis.de>

	* codegen.c : Fix code gen for tag NULL

2005-02-04  Roger While <simrw@sim-basis.de>

	* parser.y, typeck.c, tree.h, tree.c, reserved.c :
	  implement DISPLAY .. UPON ENVIRONMENT-VALUE
	  implement DISPLAY .. UPON ARGUMENT-NUMBER
	  implement ACCEPT .. FROM ARGUMENT-NUMBER
	  implement ACCEPT .. FROM ARGUMENT-VALUE

2005-02-01  Roger While <simrw@sim-basis.de>

	* cobc.c : Add help text for -std=

2004-11-05  Roger While <simrw@sim-basis.de>

	* codegen.c : readjust align to 8

2004-11-05  Roger While <simrw@sim-basis.de>

	* cobc.h : Print file/line when ABORT()

2004-11-05  Roger While <simrw@sim-basis.de>

	* codegen.c, field.c, tree.c, typeck.c : Handle arithemetic
	  for !binary_trunc. 

2004-11-02  Roger While <simrw@sim-basis.de>

	* codegen.c : Thinko by me - Do not exit execution
	  if there is a file USE declarative and no FILE STATUS.

2004-11-01  Roger While <simrw@sim-basis.de>

	* tree.c : Fix bug 1014371 - 88 on POINTER

2004-10-31  Roger While <simrw@sim-basis.de>

	* cobc.c, codegen.c : Activate exceptions for I/O

2004-10-31  Keisuke Nishida  <knishida@open-cobol.org>

	* parser.y (evaluate_object): Print error in the case when the
	compiler cannot handle the expression correctly.  Need fix.

2004-10-30  Roger While <simrw@sim-basis.de>

	* typeck.c, parser.y, error.c, field.c config.c, tree.c, tree.h,
	  pplex.l : Replace back-tick "`" with quote "'"